# tinder.py

./: .deepsource.toml  README.md  example.py  pyproject.toml
.github/workflows/: buildtest.yml  format.yml
demo/: automatch.py
docs/: conf.py  index.rst  tinder.models.rst  tinder.rst
tests/: test_http.py  test_tinder.py
tinder/: __init__.py  client.py  errors.py  gateway.py  http.py  state.py  types.py  utils.py
tinder/models/: __init__.py  abc.py  asset.py  user.py
