[tool.poetry]
name = "tinder.py"
version = "0.1.1"
description = ""
authors = ["Tiago Vilela <tiagovla@gmail.com>"]
packages = [
    {include = "tinder", from="."}
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
