[tool.poetry]
name = "tinder.py"
version = "0.1.1"
description = "Asynchronous Tinder Client"
license = "GPL-3.0-or-later"
authors = ["Tiago Vilela <tiagovla@gmail.com>"]
packages = [
    {include = "tinder", from="."}
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
autopep8 = "^1.5.4"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
pytest-cov = "^3.0.0"
pytest = "^7.1.2"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
